<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BF6A6767"
    tools:context=".activitys.ContentActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/logOut_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_margin="20dp"
        android:background="@drawable/roundbuttons"
        android:onClick="log_out"
        android:text="@string/salir"
        android:textColor="@color/white" />
    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="298dp"
        android:layout_height="273dp"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/bg4"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/textView4"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28dp"
        android:layout_marginTop="280dp"
        android:text="@string/Title"
        android:fontFamily="@font/campus"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp">
        <TextView
            android:id="@+id/textView2"
            android:layout_width="200dp"
            android:textAlignment="center"
            android:layout_height="35dp"
            android:background="@drawable/borders"
            android:text="@string/entrenamientos"
            android:textStyle="bold"
             />
        <TextView
            android:id="@+id/training_tv"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/borders"
            android:text="TextView"
            android:textAlignment="center"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/training2_tv"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="125dp"
            android:background="@drawable/borders"
            android:textAlignment="center"
            android:text="TextView"
            android:textStyle="bold"
        />
        </RelativeLayout>
    <RelativeLayout
        android:layout_width="400dp"
        android:layout_height="100dp"

        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="500dp">
        <Button
            android:id="@+id/map_btn"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@drawable/borders"
            android:text="@string/Mapa"
            android:layout_margin="10dp"
            android:layout_alignParentRight="true"

            />

        <Button
            android:id="@+id/button"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_margin="10dp"
            android:background="@drawable/borders"
            android:text="COMPAÑEROS" />
    </RelativeLayout>

</RelativeLayout>