<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".LoginActivity">

    <!-- Android Small - 2 -->


    <TextView
        android:id="@+id/textView3"
        android:layout_width="216dp"
        android:layout_height="53dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.458"
        tools:text="𝓚𝓷𝓾𝓬𝓴𝓵𝓮 𝓑𝓸𝔁𝓲𝓷𝓰" />

    <EditText
        android:id="@+id/username_et"
        android:layout_width="320dp"
        android:layout_height="57dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@color/white"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:hint="@string/usuario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.618"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/confirm_login_btn"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_et"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="84dp"
        android:background="@drawable/roundbuttons"
        android:onClick="logeatu"
        android:text="@string/entrar"
        app:iconTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="320dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toTopOf="@+id/confirm_login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_et"
        app:layout_constraintVertical_bias="0.492"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096"
        app:srcCompat="@drawable/bg3" />


</androidx.constraintlayout.widget.ConstraintLayout>